--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "appwrite": "^21.3.0",
     "expo": "54.0.21",
     "expo-constants": "~18.0.10",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
     "expo-status-bar": "~3.0.8",
     "expo-updates": "~29.0.12",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-image-picker": "^8.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0"
