--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "appwrite": "^21.3.0",
@@ -24,5 +25,19 @@
     "react-native-screens": "~4.16.0",
     "react-native-url-polyfill": "^3.0.0"
   },
-  "private": true
+  "jest": {
+    "testEnvironment": "node",
+    "moduleFileExtensions": ["js", "jsx"],
+    "transform": {
+      "^.+\\.(js|jsx)$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@react-native|react-native|expo|expo-router|@expo|@unimodules|unimodules|@react-navigation)/)"
+    ]
+  },
+  "private": true,
+  "devDependencies": {
+    "@testing-library/react-native": "^13.3.3",
+    "jest": "^30.2.0"
+  }
 }
